crates/courier-ftp/src/components/message_log/snapshots/courier_ftp__components__message_log__snapshot_tests__log_all_kinds@160x48.snap
---
source: crates/courier-ftp/src/components/message_log/snapshot_tests.rs
expression: text
---
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│12:00:01 Status:   Resolving address of example.com                                                                                                           │
│12:00:02 Status:   Warning: server clock is 3 minutes ahead                                                                                                   │
│12:00:03 Command:  LIST -a                                                                                                                                    │
│12:00:04 Response: 150 Opening data connection                                                                                                                │
│12:00:05 Error:    Connection timed out after 20 seconds                                                                                                      │
│12:00:06 Trace:    send_packet(len=52)                                                                                                                        │
│12:00:07 Listing:  drwxr-xr-x    2 www      www          4096 May  2 10:02 html                                                                               │
│12:00:08 Response: 220 ^[[31mred^[[0m banner <U+202E>gpj.exe                                                                                                  │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
--- styles ---
  1   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  2   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  2  10+7   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset)
  2  20+40  Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset)
  3   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  3  10+8   Style::new().fg(Color::Indexed(4)).bg(Color::Reset).underline_color(Color::Reset)
  3  20+7   Style::new().fg(Color::Indexed(4)).bg(Color::Reset).underline_color(Color::Reset)
  4   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  4  10+9   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  4  20+27  Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  5   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  5  10+6   Style::new().fg(Color::Indexed(1)).bg(Color::Reset).underline_color(Color::Reset).bold()
  5  20+37  Style::new().fg(Color::Indexed(1)).bg(Color::Reset).underline_color(Color::Reset).bold()
  6   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  6  10+6   Style::new().fg(Color::Indexed(8)).bg(Color::Reset).underline_color(Color::Reset)
  6  20+19  Style::new().fg(Color::Indexed(8)).bg(Color::Reset).underline_color(Color::Reset)
  7   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  7  10+8   Style::new().fg(Color::Indexed(6)).bg(Color::Reset).underline_color(Color::Reset)
  7  20+60  Style::new().fg(Color::Indexed(6)).bg(Color::Reset).underline_color(Color::Reset)
  8   1+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  8  10+9   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  8  20+4   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  8  24+2   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset).reversed()
  8  26+7   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  8  33+2   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset).reversed()
  8  35+11  Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
  8  46+8   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset).reversed()
  8  54+7   Style::new().fg(Color::Indexed(2)).bg(Color::Reset).underline_color(Color::Reset)
